# red-fileops

./: .gitignore  README.md  example.py  noxfile.py  pyproject.toml  ruff.ci.toml  ruff.toml
requirements/: requirements.dev.txt  requirements.txt
src/red_fileops/: __init__.py  main.py
src/red_fileops/_scan/: __init__.py  classes.py
src/red_fileops/analyze/: __init__.py  methods.py
src/red_fileops/core/: __init__.py  constants.py
src/red_fileops/core/database/: db_config.py
src/red_fileops/core/database/annotated/: annotated_columns.py
src/red_fileops/core/utils/converters/: __init__.py
src/red_fileops/core/utils/converters/str_converters/: __init__.py  methods.py
src/red_fileops/modules/_scan/: __init__.py  classes.py
src/red_fileops/modules/_sysinfo/: __init__.py
src/red_fileops/modules/_sysinfo/domain/enums/platform/: cross_platform.py  mac.py  unix.py  win32.py
src/red_fileops/modules/_sysinfo/domain/mixins/: __init__.py
src/red_fileops/modules/_sysinfo/domain/platform/: __init__.py  methods.py  schemas.py
src/red_fileops/modules/_sysinfo/domain/sysinfo/: __init__.py  methods.py  schemas.py
src/red_fileops/modules/_sysinfo/domain/userinfo/: __init__.py  _unix.py  _win.py  methods.py  schemas.py
src/red_fileops/modules/_sysinfo/utils/: __init__.py
src/red_fileops/modules/_sysinfo/utils/conversion_utils/: __init__.py  converters.py
src/red_fileops/modules/_sysinfo/utils/platform_utils/: operations.py
src/red_fileops/scan/: __init__.py
src/red_fileops/sysinfo/: __init__.py
(+6 files in other folders)
